--- a/array-iteration-benchmark.cabal
+++ b/array-iteration-benchmark.cabal
@@ -11,22 +11,33 @@ copyright: 2019 Andrew Martin
 category: Development
 
 library
-  exposed-modules: LowToHigh HighToLowNeq HighToLowCase HighToLowGt
+  exposed-modules: LowToHigh HighToLowNeq HighToLowCase HighToLowGt Unit
   build-depends:
     , base >=4.12.0.0 && <5
     , primitive ^>=0.6.4
   hs-source-dirs: src
   default-language: Haskell2010
-  ghc-options: -Wall -O2 -ddump-simpl -dsuppress-all -ddump-stg -ddump-asm -ddump-to-file
+  ghc-options: -Wall -O2 -ddump-simpl -dsuppress-all -ddump-stg -ddump-asm -ddump-to-file -ddump-opt-cmm
 
 benchmark bench
   type: exitcode-stdio-1.0
   build-depends:
     , array-iteration-benchmark
-    , base >=4.12.0.0 && <5
-    , criterion ^>=1.5.4
+    , base
+    , gauge >=0.2.4
     , primitive ^>=0.6.4
   ghc-options: -Wall -O2
   default-language: Haskell2010
   hs-source-dirs: bench
   main-is: Main.hs
+
+test-suite test
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is: Main.hs
+  build-depends:
+    , array-iteration-benchmark
+    , base
+    , primitive ^>=0.6.4
+  ghc-options: -Wall -O2
+  default-language: Haskell2010
