--- a/cabal.project
+++ b/cabal.project
@@ -1,5 +1,14 @@
-packages: .
+packages: . ../foundation/basement
+with-compiler: /home/amartin/.local/bin/ghc-8.9.20190408
 source-repository-package
   type: git
   location: https://github.com/vincenthz/hs-gauge
   tag: 3069be4752a4c0f2ac310e66b44d7929763da19c
+source-repository-package
+  type: git
+  location: https://github.com/haskell/primitive
+  tag: 267e940461df93fecb6080eb606151538ca3a7eb
+source-repository-package
+  type: git
+  location: https://github.com/haskell/vector
+  tag: 8612af0f5eec29dcea78e3a40f215ec0867cb341
